# lastfm-stats

./: .env.example  .gitignore  .mise.development.toml  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  rxconfig.py  setup.cfg
.github/workflows/: publish.yml  release.yml
examples/history/: lastfm_anal.py  leaflet_map.py
lastfm/: config.py  lastfm.py
lastfm/components/: sidebar.py
lastfm/history/: lastfm_anal.py  lastfm_down.py  music_brainz_down.py  music_brainz_geocoder.py
lastfm/pages/: __init__.py  dashboard.py  index.py  now_playing.py  recently.py
lastfm/templates/: template.py
lastfm/tools/: __init__.py  csv_lookup.py  download_scrobbles.py  get_lyrics.py  lastplayed.py  loved.py  loveit.py  mylast.py  nowplaying.py  np.py  scrobble.py  skip.py
leaflet/: lastfm-artists-map.html  lastfm-dataset.js
src/lastfm/: __init__.py  config.py  lastfm.py
src/lastfm/components/: sidebar.py
src/lastfm/history/: lastfm_anal.py  lastfm_down.py  leaflet_map.py  music_brainz_down.py  music_brainz_geocoder.py
src/lastfm/pages/: __init__.py  dashboard.py  now_playing.py  recently.py  settings.py
src/lastfm/templates/: template.py
src/lastfm/tools/: download_scrobbles.py  mylast.py  nowplaying.py  np.py  skip.py
