[tool.poetry]
name = "lastfm"
version = "0.1.0"
description = "Simple Last.fm app"
authors = ["Eirik Rolland Enger <engeir@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pylast = "^5.1.0"
termcolor = "^2.3.0"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
geopy = "^2.3.0"
basemap = "^1.3.7"
ipython = "^8.14.0"
importlib-metadata = "^6.6.0"
pendulum = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
ruff = "^0.0.270"
darglint = "^1.8.1"
pre-commit-hooks = "^4.4.0"
pre-commit = "^3.3.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
